# EDA

./: .gitignore  README.md  clean.py  main.py  pyproject.toml  summary.py
data_evaluation_package/: summary.py
data_evaluation_pkg/: clean.py  summary.py
data_evaluation_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
