[build-system]
requires = [
  "setuptools",
  "pandas",
  "numpy",
  "scipy",
  "statsmodels"
  ]
build-backend = "setuptools.build_meta"

[project]
name = "data_evaluation_pkg"
version = "0.0.0"
authors = [
  { name="Michael Abbott", email="michael.abbott@rochester.edu" },
]
description = "package that performs general data cleaning and summarizing tasks"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

